--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "css": "postcss ./src/css/main.css -c postcss.config.js -o ./dist/css/main.min.css --watch",
-    "pug": "pug src/templates/index.pug -o dist -P"
+    "build:css": "postcss -c postcss.config.js src/css/main.css -o dist/css/main.min.css",
+    "build:pug": "pug src/templates/index.pug -o dist -P",
+    "build": "run-p build:*",
+    "watch:css": "postcss -c postcss.config.js src/css/main.css -o dist/css/main.min.css -w",
+    "watch:pug": "pug src/templates/index.pug -o dist -P -w",
+    "watch:serve": "browser-sync --server 'dist' start --files 'dist/css/*.css, dist/index.html'",
+    "start": "npm-run-all clean:dist build --parallel watch:*",
+    "clean:dist": "rimraf 'dist'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.18.13",
     "cssnano": "^3.10.0",
+    "npm-run-all": "^4.1.1",
+    "onchange": "^3.2.1",
     "postcss-cli": "^4.1.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-url": "^7.1.2",
+    "pug-cli": "^1.0.0-alpha6",
+    "rimraf": "^2.6.2",
     "uncss": "^0.15.0"
   },
-  "dependencies": {
-    "pug-cli": "^1.0.0-alpha6"
-  }
+  "dependencies": {}
 }
