added fonts and images scripts; add README.md

--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build:css": "postcss -c postcss.config.js src/css/main.css -o dist/css/main.min.css",
     "build:pug": "pug src/templates/index.pug -o dist -P",
     "build": "run-p build:*",
+    "images": "mkdir -p dist/img && cp src/img/* dist/img",
+    "watch:images": "onchange 'src/img/*' -- npm run images",
+    "copy:fonts": "copyfiles -f src/fonts/**/* dist/fonts",
+    "watch:fonts": "onchange 'src/fonts/**/*' -- npm run copy:fonts",
     "watch:css": "postcss -c postcss.config.js src/css/main.css -o dist/css/main.min.css -w",
     "watch:pug": "pug src/templates/index.pug -o dist -P -w",
     "watch:serve": "browser-sync --server 'dist' start --files 'dist/css/*.css, dist/index.html'",
-    "start": "npm-run-all clean:dist build --parallel watch:*",
+    "start": "npm-run-all clean:dist build images --parallel watch:*",
     "clean:dist": "rimraf 'dist'"
   },
   "keywords": [],
@@ -18,7 +22,10 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.18.13",
+    "copyfiles": "^1.2.0",
     "cssnano": "^3.10.0",
+    "imagemin": "^5.3.1",
+    "imagemin-cli": "^3.0.0",
     "npm-run-all": "^4.1.1",
     "onchange": "^3.2.1",
     "postcss-cli": "^4.1.1",
